--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!-- One -->
         <section id="one" class="wrapper style2 spotlights highlight-one highlight-two">
             <section>
-                <a href="https://tomasz-amanowicz-blog.herokuapp.com/" class="image"><img src="images/bermix-studio-cyber-unsplash.jpg" alt="image of hacker with laptop" data-position="center center" /></a>
+                <a href="https://tomasz-amanowicz-blog.herokuapp.com/" class="image" target="_blank"><img src="images/bermix-studio-cyber-unsplash.jpg" alt="image of hacker with laptop" data-position="center center" /></a>
                 <div class="content">
                     <div class="inner">
                         <h2>Cyber Security</h2>
