--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="star p-fifteen"></div>
                 <div class="star p-sixteen"></div>
                 <h1>Tomasz Amanowicz</h1>
-                <p>Web developer.</p>
+                <p>Full stack developer.</p>
                 <ul class="actions">
                     <li><a href="#one" class="button scrolly">Learn more</a></li>
                 </ul>
@@ -98,11 +98,13 @@
         <!-- One -->
         <section id="one" class="wrapper style2 spotlights highlight-one highlight-two">
             <section>
-                <a href="https://tomasz-amanowicz-blog.herokuapp.com/" class="image" target="_blank"><img src="images/bermix-studio-cyber-unsplash.jpg" alt="image of hacker with laptop" data-position="center center" /></a>
+                <a href="https://www.soprabanking.com/" class="image" target="_blank"><img src="images/pakata-goh-EJMTKCZ00I0-unsplash.jpg" alt="image of hacker with laptop" data-position="center center" /></a>
                 <div class="content">
                     <div class="inner">
-                        <h2>Cyber Security</h2>
-                        <p>Participating in University of the West of England Course gave me a chance to gain knowledge about various aspects of cyber security, networking, attacks and defence.<br> Please click on picture to open<span id="toggled-one"> my documented path through the learning process on my blog build in Django.</span>
+                        <h2>Sopra Banking Software</h2>
+                        <p>Working for Sopra Steria , I am responsible for maintaining the code and for implementation of new features. The project require from me to be responsible for back and front end of the application. Stack I use in my work include
+                            SQL, DotNet, C++, Windows App SDK, NodeJs, <span id="toggled-one">Angular. My main tools to perform at my role include Visual Studio, Git Bash.
+                            </span>
                             <span id="toggle" title="Click to expand text"><i class="fas fa-angle-double-right  arrow-color"  id="show-one"></i>
                         <i class="fas fa-angle-double-left  arrow-color"  id="hide-one" title="Click to collapse text"></i></span></p>
                         <ul class="actions">
