--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="star p-fifteen"></div>
                 <div class="star p-sixteen"></div>
                 <h1>Tomasz Amanowicz</h1>
-                <p>Full stack developer.</p>
+                <p>Full stack developer</p>
                 <ul class="actions">
                     <li><a href="#one" class="button scrolly">Learn more</a></li>
                 </ul>
